--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Elaina's Profile</title>
     <meta name="title" content="Elaina's Profile"/>
     <meta name="description" content="Heres a little information about Elaina"/> 
-    <meta name="og:image" content="https://cdn.discordapp.com/attachments/1055727394343899190/1069591436628066354/2c678002e587299b3511cec86382daf1.jpg"/>
+    <meta name="og:image" content="https://cdn.discordapp.com/avatars/797940797479583774/821632a1a405bf27dfb3976ce1134bf5.webp?size=2048"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap" rel="stylesheet">
