--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
 
                     <div class="bio">
-                        Hey, I'm 18 and I'm a college student taking coding courses, I'v been learning how to make websites and bots. I
+                        Hey, I'm 18 and I'm a college student taking coding courses, I've been learning how to make websites and bots. I
                         hope
                         to continue developing my skills in technology as I move on from college.
                     </div>
@@ -94,7 +94,7 @@
                 <div class="button nextbtn"><i class="fa-solid fa-angle-right"></i></div>
             </div>
         </div>
-        <div class="projects transitionslow">
+        <div class="Blog">
 
 
 
