--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="button nextbtn"><i class="fa-solid fa-angle-right"></i></div>
             </div>
         </div>
-        <div class="Blogs">
+        <div class="Blogs Page">
 
 
 
