--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" oncontextmenu="return false">
+<html lang="en" oncontextmenu="return true">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#c587c1"/>
     <link rel="stylesheet" href="css/style.css">
     <title>Elaina's Profile</title>
     <meta name="title" content="Elaina's Profile"/>
     <meta name="description" content="Heres a little information about Elaina"/> 
-    <meta name="og:image" content="https://cdn.discordapp.com/avatars/797940797479583774/821632a1a405bf27dfb3976ce1134bf5.webp?size=2048"/>
+    <meta name="og:image" content="https://cdn.discordapp.com/attachments/1055727394343899190/1069591436628066354/2c678002e587299b3511cec86382daf1.jpg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap" rel="stylesheet">
@@ -19,13 +18,13 @@
     
 </head>
 
-<body oncontextmenu="return false">
+<body>
     <div class="circle1 transtion"></div>
     <div class="circle2 transtion"></div>
     <div class="container">
-       <div class="noise">
+        <!-- <div class="noise">
             <img src="/Images/noise.svg" alt="" srcset="">
-       </div>
+        </div> -->
         <div class="about transitionslow">
 
             <div class="name">
@@ -43,14 +42,14 @@
                     </div>
 
                     <div class="bio">
-                        Hey, I'm 18 and I'm a college student taking coding courses, I've been learning how to make websites and bots. I
+                        Hey, I'm 18 and I'm a college student taking coding courses, I'v been learning how to make websites and bots. I
                         hope
                         to continue developing my skills in technology as I move on from college.
                     </div>
 
                     <div class="links">
                         <div><i class="fa-solid fa-venus"></i>
-                            She/Her
+                            He/Him
                         </div>
                         <div><i class="fa-solid fa-location-dot"></i>
                             <a>United Kingdom, London</a>
@@ -118,31 +117,6 @@
 </body>
 <script src="https://kit.fontawesome.com/0fefc49e08.js" crossorigin="anonymous"></script>
 <script src="script/script.js"></script>
-    
-    <script>
-
-	document.onkeydown=function(e)
-    {
-		if(event.keycode = 123)
-		{
-			return false;
-		}
-
-		if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0))
-		{
-			return flase;
-		}
-
-		if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0))
-		{
-			return false;
-		}
-		if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0))
-		{
-			return false;
-		}
-	}
-</script>
 
 
 </html>
