--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                     <div class="links">
                         <div><i class="fa-solid fa-venus"></i>
-                            He/Him
+                            She/Her
                         </div>
                         <div><i class="fa-solid fa-location-dot"></i>
                             <a>United Kingdom, London</a>
