--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Elaina's Profile</title>
     <meta name="title" content="Elaina's Profile"/>
     <meta name="description" content="Heres a little information about Elaina"/> 
-    <meta name="og:image" content="https://cdn.discordapp.com/attachments/1055727394343899190/1069591436628066354/2c678002e587299b3511cec86382daf1.jpg"/>
+    <meta name="og:image" content="https://media.discordapp.net/attachments/909395082388602920/1077541619877818398/6_cute-pfps-for-girls-5_webp-transformed.jpeg"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
 
                     <div class="links">
                         <div><i class="fa-solid fa-venus"></i>
-                            He/Him
+                            She/Her
                         </div>
                         <div><i class="fa-solid fa-location-dot"></i>
                             <a>United Kingdom, London</a>
