--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Elaina's Profile</title>
-    <meta name="title" content="Elaina's Profile"/>
-    <meta name="description" content="Heres a little information about Elaina"/> 
-    <meta name="og:image" content="https://media.discordapp.net/attachments/909395082388602920/1077541619877818398/6_cute-pfps-for-girls-5_webp-transformed.jpeg"/>
+    <title>Amiee's Profile</title>
+    <meta name="title" content="Amiee's Profile"/>
+    <meta name="description" content="Heres a little information about Amiee"/> 
+    <meta name="og:image" content="https://media.discordapp.net/attachments/1092225064344227840/1092233498053578842/pfp.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;600&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
                 </div>
                 <div class="content">
                     <div class="title">
-                        Hey, I'm Elaina
+                        Hey, I'm Amiee
                     </div>
 
                     <div class="bio">
